// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container does not cause errors without props 1`] = `
<div
  className="container"
>
  <div
    className="content"
  />
</div>
`;

exports[`Container renders sub-components 1`] = `
<div
  className="container"
>
  <div
    className="content"
  >
    <a
      className="button"
      href="/"
    >
      Hello World
    </a>
  </div>
</div>
`;
